# Vincent-Suniverse.github.io

./: .gitignore  CLAUDE.md  ORCA_SCHWARM_ARCHITEKTUR.md  README.md  anim_1008.html  anim_142857.html  anim_3plus4.html  anim_alpha_beta_gamma.html  anim_antarktis_these.html  cexo.py  cexo_bridge.py  cexo_core.py  cexo_gauss.py  cexo_neuron.js  cexo_research.py  cexo_voice.py  fau.html  feld.html  fetch_music.js  index.html  lang.js  pi_field.py  pi_generator.py  pyproject.toml  requirements.txt  research_engine.py  spielfeld.html  start_dell.bat  start_hetzner.sh  sword23_backtest.py
covers/: README.md
radio_monitor/: __init__.py  cli.py  config.py  models.py  parser.py  pipeline.py  poller.py  storage.py
rag-demo/: RAG_DEEP_DIVE.md  README.md  beispiel_wissen.txt  rag_demo.py  requirements.txt
tests/: test_parser.py  test_storage.py
vorhersagen/: CERN_VORHERSAGEN_BLOCK.md
