[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-monitor"
version = "0.1.0"
description = "Monitoring pipeline for ADS-B aircraft transponder transmissions"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.scripts]
radio-monitor = "radio_monitor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99
